<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share">Поделиться</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="arrow_back">Arrow back</string>
    <string name="clear">Очистить поисковый запрос</string>
    <string name="supp_message_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supp_message_content">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="android_developer">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="supp_message_address">eu.pim@mail.ru</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="history">Вы искали</string>
    <string name="clear_history">Очистить поиск</string>
    <string name="track_length">Длительность</string>
    <string name="release_year">Год</string>
    <string name="album">Альбом</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="time_left">00:00</string>
    <string name="half_minute">00:30</string>
    <string name="track_lost">Трек потераялся по пути.</string>
    <string name="no_preview">Нет ознакомительного фрагмента</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_saved_media">Ваша медиатека пуста</string>
    <string name="add_playlist">Новый плейлист</string>
    <string name="no_created_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="playlists">Плейлисты</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="dialog_message">Разрешить приложению \"PlaylistMaker\" доступ к фото?</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_message_data_will_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="close">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="already_added">Трек уже добавлен в плейлист</string>
    <string name="no_content_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_track">Удалить трек</string>
    <string name="really_delete">Хотите удалить трек?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="really_delete_playlist">Хотите удалить плейлист?</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
</resources>