<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorOnPrimary"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.settings.SettingsFragment">

    <!-- Head -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarAppearance"
        app:title="@string/settings" />

    <!-- Dark theme -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dark_theme"
        style="@style/MenuTextStyle"
        android:layout_width="match_parent"
        app:trackTint="@color/switcher_track_color"
        app:thumbTint="@color/switcher_thumb_color"
        android:layout_height="@dimen/menu_button_height"
        android:text="@string/dark_theme" />

    <!-- Share -->
    <TextView
        style="@style/MenuTextStyle"
        android:id="@+id/share"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/share" />

    <!-- Support -->
    <TextView
        style="@style/MenuTextStyle"
        android:id="@+id/support"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/supp" />

    <!-- User agreement -->
    <TextView
        style="@style/MenuTextStyle"
        android:id="@+id/user_agreement"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/arrow" />

</LinearLayout>