<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/medium_size"
    android:paddingRight="@dimen/medium_size"
    android:orientation="vertical">

    <!-- Head -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:backgroundTint="?android:background"
            android:contentDescription="@string/arrow_back"
            android:minHeight="48dp"
            android:src="@drawable/back_arrow"
            app:tint="?attr/colorOnSecondary" />

        <TextView
            style="@style/HeadTextStyle"
            android:layout_gravity="center"
            android:text="@string/settings" />

    </LinearLayout>

    <!-- Dark theme -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/MenuTextStyle"
            android:layout_height="@dimen/menu_button_height"
            android:layout_weight="1"
            android:text="@string/dark_theme" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dark_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTint="?attr/color"
            android:gravity="center" />

    </LinearLayout>

    <!-- Share -->
    <TextView
        style="@style/MenuTextStyle.WithIcon"
        android:id="@+id/share"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/share" />

    <!-- Support -->
    <TextView
        style="@style/MenuTextStyle.WithIcon"
        android:id="@+id/support"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/supp" />

    <!-- User agreement -->
    <TextView
        style="@style/MenuTextStyle.WithIcon"
        android:id="@+id/user_agreement"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/arrow" />

</LinearLayout>