<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/medium_size"
    android:paddingTop="14dp"
    android:paddingRight="@dimen/medium_size"
    android:paddingBottom="12dp">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_big"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:text="@string/title"
        android:textColor="@color/custom_white"
        android:textSize="@dimen/head_text_size" />

    <!-- Search -->
    <Button
        android:id="@+id/search"
        style="@style/ButtonWithTextOnMain"
        android:text="@string/search"
        app:icon="@drawable/search" />

    <!-- Media -->
    <Button
        android:id="@+id/media"
        style="@style/ButtonWithTextOnMain"
        android:text="@string/media"
        app:icon="@drawable/media" />

    <!-- Settings -->
    <Button
        android:id="@+id/settings"
        style="@style/ButtonWithTextOnMain"
        android:text="@string/settings"
        app:icon="@drawable/settings" />

</LinearLayout>