<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

<!--    <TextView-->
<!--        android:layout_marginTop="14dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/settings"-->
<!--        android:textColor="@color/custom_black"-->
<!--        android:textSize="22sp"-->


<!--        app:drawableStartCompat="@drawable/arrowback"-->
<!--        app:drawableTint="@color/custom_black"-->
<!--        />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="28dp"
            android:contentDescription="@string/arrow_back"
            app:srcCompat="@drawable/arrowback"
            app:tint="@color/custom_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/custom_black"
            android:textSize="22sp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/off"
        android:drawableTint="@color/icons_gray"
        android:text="@string/dark_theme"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/custom_black"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:backgroundTint="@color/white"
        android:text="@string/share"
        android:textColor="@color/custom_black"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:drawableEnd="@drawable/share"
        android:drawableTint="@color/icons_gray"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:backgroundTint="@color/white"
        android:text="@string/support"
        android:textColor="@color/custom_black"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:drawableEnd="@drawable/supp"
        android:drawableTint="@color/icons_gray"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:backgroundTint="@color/white"
        android:text="@string/user_agreement"
        android:textColor="@color/custom_black"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:drawableEnd="@drawable/arrow"
        android:drawableTint="@color/icons_gray"
        />

</LinearLayout>